changes: page_one.xml  -  change text color of red button page_two.xml  -  change background color

--- a/app/src/main/res/layout/page_one.xml
+++ b/app/src/main/res/layout/page_one.xml
@@ -29,6 +29,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="Add"
+        android:textColor="#f9f9f9"
         android:backgroundTint="#D64045"/>
 
     <CheckBox
